<resources>
    <string name="app_name">DriveMeAndroid</string>
        <string name="email_address">Email Address</string>
        <string name="password">Password</string>
        <string name="login">Login</string>
        <string name="cancel">Cancel</string>
        <string name="login_image">Login Image</string>
    <string name="next">Next</string>
    <string name="type_here">Type Here</string>
    <string name="any_delivery_instructions_optional">Any Delivery Instructions (Optional)</string>
    <string name="select_time">Select Time</string>
    <string name="select_day">Select Day</string>
    <string name="pick_a_date_and_time">Pick a Date and Time</string>
    <string name="tell_us_about_your_car">Tell us about your Car</string>
    <string name="date_and_time">DATE AND TIME</string>
    <string name="choose_driver">Choose Driver</string>
    <string name="book_now">Book Now</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="fa_hamburger">\uf0c9</string>
    <string name="bookings">Bookings</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="tag">Tag</string>
    <string name="about">About</string>
    <string name="model">Model</string>
    <string name="shift">Shift</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="recharge">Recharge</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>